--- a/Westetal1985/Westetal1985.html
+++ b/Westetal1985/Westetal1985.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([-32.81969116149992, 151.74063493400007], 13.0);
-      L.tileLayer('https://gregjwest.github.io/NSW_EstMacrophytes/Westetal1985/{z}/{x}/{y}.png', {
+      L.tileLayer('{z}/{x}/{y}.png', {
         minZoom: 10,
         maxZoom: 16,
         tms: false,
