--- a/fire_damage/fire_damage.html
+++ b/fire_damage/fire_damage.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([-37.160198715, 149.9120143935], 12.5);
-      L.tileLayer('file:///C%3A/Temp/fire_damage/{z}/{x}/{y}.png', {
+      L.tileLayer('{z}/{x}/{y}.png', {
         minZoom: 8,
         maxZoom: 17,
         tms: false,
