--- a/mooringarea/MooringAreas.html
+++ b/mooringarea/MooringAreas.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([-32.62817605, 151.73105719400002], 12.5);
-      L.tileLayer('file:///C%3A/GIS/MooringAreas/{z}/{x}/{y}.png', {
+      L.tileLayer('{z}/{x}/{y}.png', {
         minZoom: 8,
         maxZoom: 17,
         tms: false,
